# OmicABELnoMM

./: .gitignore  AIOwrapper.cpp  AIOwrapper.h  AUTHORS  Algorithm.cpp  ChangeLog  CreateData.R  Definitions.h  Makefile.am  README.org  Utility.h  XL.fvd  XL.fvi  XR.fvd  XR.fvi  Y.fvd  Y.fvi  configure.ac  main.cpp
OmicOUT/: main.cpp
doc/: Makefile.am  UserGuide.tex  acknowledgements.tex  faq.tex  howtocompile.txt  installation.tex  introduction.tex  preparing_input.tex  quickusage.tex  running_analysis.tex  understanding_oanomm.tex
examples/: CreateData.R  Makefile.am  create_XL.R  create_XR.R  create_Y.R  exclude_individuals.txt  settings.R
examples/interactions/: INT0.fvi  INT01.fvd  INT01.fvi  INT011.fvd  INT011.fvi  INT01R.fvd  INT01R.fvi  INT1.fvd  INT1.fvi  INT10.fvd  INT10.fvi  INT11.fvd  INT11.fvi  INT1RR.fvd  INT1RR.fvi  INTR.fvd  INTR.fvi  INTR0.fvd  INTR0.fvi  INTR1.fvd  INTR1.fvi  INTRR.fvd  INTRR.fvi  XL.fvd  XL.fvi  XR.fvd  XR.fvi  Y.fvd  Y.fvi
examples/small/: XL.fvd  XL.fvi  XR.fvd  XR.fvi  Y.fvd  Y.fvi  bpre.fvd
src/: AIOwrapper.cpp  AIOwrapper.h  Algorithm.cpp  Algorithm.h  Definitions.h  Makefile.am  Utility.cpp  Utility.h  main.cpp
tests/: Makefile  Makefile.am  test.cpp
