# This is the top Makefile.am for OmicABELnoMM. OmicABELnoMM uses a
# non-recursive Makefile, so make sure that path names are included,
# etc.
# The includes below load the Automake files for the specific
# subdirectories. Automake integrates them all in one large Makefile.

CLEANFILES =

include $(srcdir)/src/Makefile.am
include $(srcdir)/tests/Makefile.am
include $(srcdir)/examples/Makefile.am
include $(srcdir)/doc/Makefile.am
